[package]
name = "solana-nonce-account"
description = "Solana nonce account utils."
documentation = "https://docs.rs/solana-nonce-account"
version = "2.2.1"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
badchain-account = { workspace = true, features = ["bincode"] }
solana-hash = { workspace = true }
solana-nonce = { workspace = true, features = ["serde"] }
badchain-sdk-ids = { workspace = true }

[dev-dependencies]
solana-fee-calculator = { workspace = true }
solana-pubkey = { workspace = true }
