[package]
name = "solana-slot-history"
description = "Types and utilities for the Solana SlotHistory sysvar."
documentation = "https://docs.rs/solana-slot-history"
version = "2.2.1"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
serde = ["dep:serde", "dep:serde_derive", "bv/serde"]
sysvar = ["dep:badchain-sdk-ids", "dep:badchain-sysvar-id"]

[dependencies]
bv = { workspace = true }
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
badchain-sdk-ids = { workspace = true, optional = true }
badchain-sysvar-id = { workspace = true, optional = true }
