[package]
name = "badchain-sysvar-id"
description = "Definition for the sysvar id trait and associated macros."
documentation = "https://docs.rs/solana-sysvar-id"
version = "2.2.1"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[dependencies]
badchain-pubkey = { workspace = true, default-features = false }
badchain-sdk-ids = { workspace = true }

[lints]
workspace = true
